# GongMun-Doctor-MCP

./: .gitignore  README.md  pyproject.toml
data/raw_templates/: index.json
docs/: client-setup-ko.md  mcp-preparation.md
examples/: claude_code.mcp.json  claude_desktop_config.json  codex-config.toml
scripts/: collect_templates.py  create_test_docs.py
src/gongmun_doctor/: __init__.py  __main__.py  cli.py  engine.py  gui.py
src/gongmun_doctor/agents/administrative/: __init__.py  template_engine.py
src/gongmun_doctor/agents/administrative/templates/: audit-001-감사결과통보.json  audit-002-시정조치요구.json  audit-003-시정조치결과보고.json  audit-004-지도점검알림.json  audit-005-점검결과보고.json  civil-001-민원회신.json  civil-002-민원처리기간연장통보.json  civil-003-민원이첩통보.json  civil-004-민원처리결과통보.json  civil-005-질의회신.json  con-001-착공알림.json  con-002-준공알림.json  con-003-설계변경요청.json  con-004-준공검사결과통보.json  con-005-공사중지명령.json  con-006-공정보고요청.json  con-007-공사재개신청.json  (+33 more)
src/gongmun_doctor/clipboard/: __init__.py  monitor.py  shortcut.py
src/gongmun_doctor/hwp_com/: __init__.py  bridge.py  controller.py  tray_app.py
src/gongmun_doctor/llm/: __init__.py  cloud_runtime.py  harmony.py  pii_masker.py  runtime.py
src/gongmun_doctor/mcp/: __init__.py  models.py  server.py  services.py
src/gongmun_doctor/parser/: __init__.py  hwp_converter.py  hwpx_handler.py
src/gongmun_doctor/report/: __init__.py  markdown.py
src/gongmun_doctor/rules/: L1_spelling.json  L2_grammar.json  L3_official_style.json  __init__.py  loader.py
tests/: conftest.py  test_cli_cloud_llm.py  test_engine.py  test_hwpx_roundtrip.py  test_llm.py  test_mcp_server.py  test_mcp_services.py  test_report.py  test_rules.py  test_template_engine.py
tests/fixtures/: test_01_road_repair.hwpx  test_02_completion_inspect.hwpx  test_03_cooperation_request.hwpx
tests/test_clipboard/: test_integration.py  test_monitor.py  test_shortcut.py
tests/test_hwp_com/: test_bridge.py
tests/test_llm/: test_cloud_runtime.py  test_pii_masker.py
