[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gongmun-doctor"
version = "1.0.0"
description = "HWPX 공문서 자동 교정 CLI 도구"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "python-hwpx>=2.8.0",
]

[project.optional-dependencies]
llm = [
    "llama-cpp-python>=0.2.0",
]
hwp = [
    "pywin32>=306",
    "pystray>=0.19",
    "Pillow>=10.0",
    "keyboard>=0.13",
    "pyperclip>=1.8",
]
cloud = [
    "anthropic>=0.25",
    "openai>=1.0",
    "google-generativeai>=0.5",
]

[project.scripts]
gongmun-doctor = "gongmun_doctor.cli:main"
gongmun-doctor-gui = "gongmun_doctor.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gongmun_doctor = ["rules/*.json", "agents/administrative/templates/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--import-mode=importlib"]
markers = [
    "integration: marks tests that require real HWPX files (deselect with '-m \"not integration\"')",
]
